se agrega ejercicio-10

--- a/notebooks/Actividad.ipynb
+++ b/notebooks/Actividad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,22 +24,14 @@
     "#Ejercicio 1\n",
     "import this\n",
     "zen_text = this.s\n",
-    "print(filtro(zen_text))\n"
+    "filtro(zen_text)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El título más largo es: Jugando al nuevo FPS del momento con amigos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Ejercicio 2\n",
     "titles = [\n",
@@ -54,22 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Respeta a los demás. No se permiten insultos ni lenguaje\n",
-      "ofensivo.\n",
-      "Evita el spam. No publiques enlaces sospechosos o repetitivos.\n",
-      "No compartas información personal.\n",
-      "Usa los canales adecuados para cada tema.\n",
-      "Sigue las instrucciones de los moderadores.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Ejercicio 3\n",
     "rules = \"\"\"Respeta a los demás. No se permiten insultos ni lenguaje\n",
@@ -182,9 +161,56 @@
     "\"SANDRA MORALES\", \"miguel ángel\", \"Miguel Ángel \", \" Damián Castillo\",\n",
     "\"Damián Castillo \", None, \"\", \" \"\n",
     "]\n",
-    "print(\"Lista limpia de clientes al realizar todas las operaciones:\")\n",
     "print(Limpiar(clients))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ejercicio 10: Simulación de partidas y ranking en shooter online\n",
+    "\n",
+    "rounds = [\n",
+    "    {\n",
+    "    'Shadow': {'kills': 2, 'assists': 1, 'deaths': True},\n",
+    "    'Blaze': {'kills': 1, 'assists': 0, 'deaths': False},\n",
+    "    'Viper': {'kills': 1, 'assists': 2, 'deaths': True},\n",
+    "    'Frost': {'kills': 0, 'assists': 1, 'deaths': False},\n",
+    "    'Reaper': {'kills': 1, 'assists': 1, 'deaths': False}\n",
+    "    },\n",
+    "    {\n",
+    "    'Shadow': {'kills': 0, 'assists': 2, 'deaths': False},\n",
+    "    'Blaze': {'kills': 2, 'assists': 0, 'deaths': True},\n",
+    "    'Viper': {'kills': 1, 'assists': 1, 'deaths': False},\n",
+    "    'Frost': {'kills': 2, 'assists': 1, 'deaths': True},\n",
+    "    'Reaper': {'kills': 0, 'assists': 1, 'deaths': False}\n",
+    "    },\n",
+    "    {\n",
+    "    'Shadow': {'kills': 1, 'assists': 0, 'deaths': False},\n",
+    "    'Blaze': {'kills': 2, 'assists': 2, 'deaths': True},\n",
+    "    'Viper': {'kills': 1, 'assists': 1, 'deaths': True},\n",
+    "    'Frost': {'kills': 0, 'assists': 1, 'deaths': False},\n",
+    "    'Reaper': {'kills': 1, 'assists': 1, 'deaths': False}\n",
+    "    },\n",
+    "    {\n",
+    "    'Shadow': {'kills': 2, 'assists': 1, 'deaths': False},\n",
+    "    'Blaze': {'kills': 1, 'assists': 0, 'deaths': True},\n",
+    "    'Viper': {'kills': 0, 'assists': 2, 'deaths': False},\n",
+    "    'Frost': {'kills': 1, 'assists': 1, 'deaths': True},\n",
+    "    'Reaper': {'kills': 1, 'assists': 1, 'deaths': False}\n",
+    "    },\n",
+    "    {\n",
+    "    'Shadow': {'kills': 1, 'assists': 2, 'deaths': True},\n",
+    "    'Blaze': {'kills': 0, 'assists': 1, 'deaths': False},\n",
+    "    'Viper': {'kills': 2, 'assists': 0, 'deaths': True},\n",
+    "    'Frost': {'kills': 1, 'assists': 1, 'deaths': False},\n",
+    "    'Reaper': {'kills': 1, 'assists': 1, 'deaths': True}\n",
+    "    }\n",
+    "]\n",
+    "ranking(rounds)"
    ]
   }
  ],
