se agrega ejercicio-10

--- a/notebooks/Actividad.ipynb
+++ b/notebooks/Actividad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
     "#Ejercicio 1\n",
     "import this\n",
@@ -29,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El título más largo es: Jugando al nuevo FPS del momento con amigos\n"
+     ]
+    }
+   ],
    "source": [
     "#Ejercicio 2\n",
     "titles = [\n",
@@ -46,9 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Respeta a los demás. No se permiten insultos ni lenguaje\n",
+      "ofensivo.\n",
+      "Evita el spam. No publiques enlaces sospechosos o repetitivos.\n",
+      "No compartas información personal.\n",
+      "Usa los canales adecuados para cada tema.\n",
+      "Sigue las instrucciones de los moderadores.\n"
+     ]
+    }
+   ],
    "source": [
     "#Ejercicio 3\n",
     "rules = \"\"\"Respeta a los demás. No se permiten insultos ni lenguaje\n",
@@ -63,9 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese un nombre de usuario:\n",
+      "Nombre de usuario no cumple con los requisitos.\n"
+     ]
+    }
+   ],
    "source": [
     "#Ejercicio 4: Validación de nombre de usuario\n",
     "print(\"Ingrese un nombre de usuario:\")\n",
@@ -75,9 +133,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese su tiempo de reacción en ms: \n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#Ejercicio 5:  Clasificación de velocidad\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mIngrese su tiempo de reacción en ms: \u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m tiempo=\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m clasificar(tiempo)\n",
+      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
    "source": [
     "#Ejercicio 5:  Clasificación de velocidad\n",
     "print(\"Ingrese su tiempo de reacción en ms: \")\n",
@@ -167,9 +244,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ranking ronda 1\n",
+      "| Jugador   | Kills | Asistencias | Muertes | MVP  | Puntos |\n",
+      "-----------------------------------------------------------\n",
+      "| Shadow    | 2     | 1          | 1     | 1     | 6     |\n",
+      "-----------------------------------------------------------\n",
+      "| Viper     | 1     | 2          | 1     | 0     | 4     |\n",
+      "-----------------------------------------------------------\n",
+      "| Reaper    | 1     | 1          | 0     | 0     | 4     |\n",
+      "-----------------------------------------------------------\n",
+      "| Blaze     | 1     | 0          | 0     | 0     | 3     |\n",
+      "-----------------------------------------------------------\n",
+      "| Frost     | 0     | 1          | 0     | 0     | 1     |\n",
+      "-----------------------------------------------------------\n",
+      "Ranking ronda 2\n",
+      "| Jugador   | Kills | Asistencias | Muertes | MVP  | Puntos |\n",
+      "-----------------------------------------------------------\n",
+      "| Shadow    | 2     | 3          | 1     | 1     | 8     |\n",
+      "-----------------------------------------------------------\n",
+      "| Blaze     | 3     | 0          | 1     | 0     | 8     |\n",
+      "-----------------------------------------------------------\n",
+      "| Viper     | 2     | 3          | 1     | 0     | 8     |\n",
+      "-----------------------------------------------------------\n",
+      "| Frost     | 2     | 2          | 1     | 1     | 7     |\n",
+      "-----------------------------------------------------------\n",
+      "| Reaper    | 1     | 2          | 0     | 0     | 5     |\n",
+      "-----------------------------------------------------------\n",
+      "Ranking ronda 3\n",
+      "| Jugador   | Kills | Asistencias | Muertes | MVP  | Puntos |\n",
+      "-----------------------------------------------------------\n",
+      "| Blaze     | 5     | 2          | 2     | 1     | 15    |\n",
+      "-----------------------------------------------------------\n",
+      "| Shadow    | 3     | 3          | 1     | 1     | 11    |\n",
+      "-----------------------------------------------------------\n",
+      "| Viper     | 3     | 4          | 2     | 0     | 11    |\n",
+      "-----------------------------------------------------------\n",
+      "| Reaper    | 2     | 3          | 0     | 0     | 9     |\n",
+      "-----------------------------------------------------------\n",
+      "| Frost     | 2     | 3          | 1     | 1     | 8     |\n",
+      "-----------------------------------------------------------\n",
+      "Ranking ronda 4\n",
+      "| Jugador   | Kills | Asistencias | Muertes | MVP  | Puntos |\n",
+      "-----------------------------------------------------------\n",
+      "| Shadow    | 5     | 4          | 1     | 2     | 18    |\n",
+      "-----------------------------------------------------------\n",
+      "| Blaze     | 6     | 2          | 3     | 1     | 17    |\n",
+      "-----------------------------------------------------------\n",
+      "| Viper     | 3     | 6          | 2     | 0     | 13    |\n",
+      "-----------------------------------------------------------\n",
+      "| Reaper    | 3     | 4          | 0     | 0     | 13    |\n",
+      "-----------------------------------------------------------\n",
+      "| Frost     | 3     | 4          | 2     | 1     | 11    |\n",
+      "-----------------------------------------------------------\n",
+      "Ranking ronda Final\n",
+      "| Jugador   | Kills | Asistencias | Muertes | MVP  | Puntos |\n",
+      "-----------------------------------------------------------\n",
+      "| Shadow    | 6     | 6          | 2     | 2     | 22    |\n",
+      "-----------------------------------------------------------\n",
+      "| Blaze     | 6     | 3          | 3     | 1     | 18    |\n",
+      "-----------------------------------------------------------\n",
+      "| Viper     | 5     | 6          | 3     | 1     | 18    |\n",
+      "-----------------------------------------------------------\n",
+      "| Reaper    | 4     | 5          | 1     | 0     | 16    |\n",
+      "-----------------------------------------------------------\n",
+      "| Frost     | 4     | 5          | 2     | 1     | 15    |\n",
+      "-----------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "#Ejercicio 10: Simulación de partidas y ranking en shooter online\n",
     "\n",
